manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdebugger
spec:
  selector:
    app: webdebugger
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
