manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webdebugger
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "webdebugger.testing.cluster.vscoder.ru"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webdebugger
            port:
              number: 80
